--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
   "author": "JamesHD",
   "license": "ISC",
   "dependencies": {
+    "fetch": "^1.1.0",
     "jsonfile": "^6.1.0",
+    "mqtt": "^4.2.6",
+    "node-fetch": "^2.6.1",
     "path": "^0.12.7",
     "pkg": "^5.2.1",
     "puppeteer": "^9.1.1",
